--- a/index.html
+++ b/index.html
@@ -95,15 +95,16 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- Pasting -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12/lib/typed.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs@1.1.0/dist/purecounter_vanilla.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/glightbox@3.3.0/dist/js/glightbox.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8.4.4/swiper-bundle.min.js"></script>
+  <script src="./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="./src/assets/vendor/php-email-form/validate.js"></script>
+  <script src="./src/assets/vendor/aos/aos.js"></script>
+  <script src="./src/assets/vendor/typed.js/typed.umd.js"></script>
+  <script src="./src/assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="./src/assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="./src/assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="./src/assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="./src/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="./src/assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Scroll Top -->
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
